methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:22: error: expected class or object definition
def marque(c: Color){
^MethodsPicture:28: error: expected class or object definition
def faireV(c: Color){
^MethodsPicture:48: error: expected class or object definition
def change(){
^MethodsPicture:56: error: Unmatched closing brace '}' ignored here
}
^